# clibot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_jira.py
clibot/: __init__.py  ai_service.py  cli.py  config.py  mcp_tools.py  ui.py
clibot/models/: __init__.py
