[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clibot"
version = "0.1.0"
description = "AI assistant CLI tool with MCP tools integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.scripts]
clibot = "clibot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clibot"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]
